<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/createEventTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit Event"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/MainTextTitle"
        android:padding="20dp"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/posterImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/editPosterImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="EDIT POSTER"


            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="100">
    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="25"
        >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputStyle"
            android:id="@+id/eventNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name" />

    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="25">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventDescriptionEditText"
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:lines="8"
                android:minLines="6"
                android:gravity="top|start"
                android:maxLines="10"
                android:hint="Description" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@color/ElementBackground">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eventStartTimeEditText"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Start" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="25"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eventEndTimeEditText"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="End" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="25"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eventLocationEditText"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Location" />
    </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/PromoQRCodeStatusTextView"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="This Event does/does not have a Promo QR Code"
            android:textColor="@color/BodyText"/>
        <CheckBox android:id="@+id/checkboxGeneratePromoQRCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Generate Promo QR Code"
            android:textColor="@color/BodyText"/>





    </LinearLayout>








    <Button
        android:id="@+id/continueCreateEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirm"
        android:layout_gravity="center"
        />


</LinearLayout>
</ScrollView>