...
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_create_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CREATE EVENT"
            app:backgroundTint="#3D5AF1"
            android:textColor="@android:color/white"
            android:autofillHints="check in"
...
